final commit related to email

--- a/style.css
+++ b/style.css
@@ -637,7 +637,7 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
-    width: 80%;
+    width: 85%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
@@ -645,11 +645,16 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
-    width: 65%;
+    width: 70%;
 }
 
 
+
 .skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
+    width: 65%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
     width: 65%;
 }
 
@@ -673,6 +678,11 @@ span {
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(5) .bar span {
     width: 80%;
+}
+
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(6) .bar span {
+    width: 70%;
 }
 
 .contact {
