--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@
 
 :root {
 
-    --bg-color: #4c4b16f0;
-    --second-bg-color: #898021ef;
+    --bg-color: #372800;
+    --second-bg-color: #876f2d;
     --text-color: #F7F1E5;
-    --main-color: #e7b00ae4;
+    --main-color: #a3842c;
 }
 
 html {
