--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 :root {
 
-    --bg-color: #372800;
+    --bg-color: #372800e7;
     --second-bg-color: #876f2d;
     --text-color: #F7F1E5;
     --main-color: #a3842c;
